# wb_parser

./: README.md  bufer.json  categorys.json  log.txt  main.py  pyproject.toml  response.json
configs/: database.py  proxy.py
