[project]
name = "wb-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Remist9",email = "serega189ser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "aiochclient (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
